@@ -289,7 +289,7 @@ it.  You don't need to assign copyright to us, but you need to check
 that you are allowed to release GPL software -- otherwise the work
 will be wasted.
 
-3) Tell Brian Gough (bjg@network-theory.co.uk) what you plan to do
+3) Tell Patrick Alken (alken@colorado.edu) what you plan to do
 (I'll make sure nobody else starts on it).  Subscribe to the
 gsl-discuss@sourceware.org mailing list (a digest version is
 available to avoid too many messages)
